tmp/syntox-2.6.1/src/rulesyacc.output
Grammar

    0 $accept: axiom $end

    1 axiom: declaration

    2 declaration: TOKEN_GRAMMAR TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK rules TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK
    3            | TOKEN_INPUT TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK term features TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK
    4            | TOKEN_INPUT TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK term TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK
    5            | TOKEN_LEXICON TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK dictionary TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK
    6            | TOKEN_DOT features static_structure_statement

    7 dictionary: word dictionary
    8           | word

    9 stringOrIdentifier: TOKEN_IDENTIFIER
   10                   | TOKEN_STRING

   11 word: TOKEN_IDENTITY TOKEN_IDENTIFIER TOKEN_SEMI
   12     | TOKEN_IDENTITY TOKEN_IDENTIFIER features static_structure_statement TOKEN_SEMI
   13     | stringOrIdentifier lexical_entries TOKEN_SEMI
   14     | stringOrIdentifier TOKEN_LPAR list_args TOKEN_RPAR lexical_entries TOKEN_SEMI
   15     | TOKEN_SEMI

   16 list_args: list_args TOKEN_COMMA identifier
   17          | identifier

   18 lexical_entries: lexical_entry TOKEN_PIPE lexical_entries
   19                | lexical_entry

   20 lexical_entry: TOKEN_IDENTIFIER features static_structure_statement
   21              | TOKEN_IDENTIFIER

   22 static_structure_statement: TOKEN_LBRACE static_list_statement TOKEN_RBRACE
   23                           | TOKEN_LBRACE TOKEN_RBRACE
   24                           | /* empty */

   25 rules: rule rules
   26      | rule

   27 rule: term TOKEN_RIGHTARROW terms_vector structure_statement TOKEN_SEMI
   28     | term TOKEN_RIGHTARROW structure_statement TOKEN_SEMI
   29     | TOKEN_SEMI

   30 terms_vector: terms_vector terms
   31             | terms

   32 terms: terms_disj
   33      | TOKEN_LPAR terms_disj TOKEN_RPAR

   34 terms_disj: terms_disj TOKEN_PIPE term
   35           | term

   36 term: TOKEN_IDENTIFIER
   37     | TOKEN_VARIABLE

   38 structure_statement: TOKEN_LBRACE list_statement TOKEN_RBRACE
   39                    | TOKEN_LBRACE TOKEN_RBRACE
   40                    | /* empty */

   41 list_statement: statement
   42               | list_statement statement

   43 static_list_statement: static_statement
   44                      | static_list_statement static_statement

   45 statement: static_statement
   46          | dynamic_statement
   47          | TOKEN_LBRACE list_statement TOKEN_RBRACE
   48          | TOKEN_LBRACE TOKEN_RBRACE

   49 static_statement: TOKEN_TEST expression_statement TOKEN_SEMI
   50                 | TOKEN_TRACE expression_statement TOKEN_SEMI
   51                 | TOKEN_TRACE TOKEN_STRING TOKEN_SEMI

   52 dynamic_statement: features TOKEN_SEMI
   53                  | left_hand_side_aff_statement TOKEN_AFF right_hand_side_aff_statement TOKEN_SEMI
   54                  | left_hand_side_subset_statement TOKEN_SUBSET right_hand_side_subset_statement TOKEN_SEMI
   55                  | TOKEN_ORDER dollars TOKEN_SEMI
   56                  | TOKEN_IF TOKEN_LPAR expression_statement TOKEN_RPAR statement
   57                  | TOKEN_IF TOKEN_LPAR expression_statement TOKEN_RPAR statement TOKEN_ELSE statement

   58 left_hand_side_subset_statement: features

   59 right_hand_side_subset_statement: variable
   60                                 | up
   61                                 | downdouble
   62                                 | features

   63 left_hand_side_aff_statement: updouble
   64                             | down
   65                             | variable

   66 right_hand_side_aff_statement: expression_statement

   67 expression_statement: expression_statement TOKEN_OR expression_statement
   68                     | expression_statement TOKEN_AND expression_statement
   69                     | expression_statement TOKEN_IMP expression_statement
   70                     | expression_statement TOKEN_EQUIV expression_statement
   71                     | TOKEN_NOT expression_statement
   72                     | expression_statement TOKEN_EQUAL expression_statement
   73                     | expression_statement TOKEN_DIFF expression_statement
   74                     | expression_statement TOKEN_LT expression_statement
   75                     | expression_statement TOKEN_LE expression_statement
   76                     | expression_statement TOKEN_GT expression_statement
   77                     | expression_statement TOKEN_GE expression_statement
   78                     | dollar
   79                     | TOKEN_FINISHED
   80                     | expression_statement TOKEN_PLUS expression_statement
   81                     | expression_statement TOKEN_MINUS expression_statement
   82                     | expression_statement TOKEN_TIMES expression_statement
   83                     | expression_statement TOKEN_DIVIDE expression_statement
   84                     | expression_statement TOKEN_MODULO expression_statement
   85                     | TOKEN_MINUS expression_statement
   86                     | TOKEN_FLOAT
   87                     | TOKEN_INTEGER
   88                     | TOKEN_IDENTIFIER TOKEN_LPAR expression_statement TOKEN_RPAR
   89                     | expression_statement TOKEN_UNION expression_statement
   90                     | up
   91                     | downdouble
   92                     | features
   93                     | TOKEN_NIL
   94                     | constant
   95                     | variable
   96                     | TOKEN_LPAR expression_statement TOKEN_RPAR
   97                     | TOKEN_SORT variable TOKEN_WITH identifier
   98                     | TOKEN_SORT list TOKEN_WITH identifier
   99                     | list

  100 up: TOKEN_UPARROW

  101 updouble: TOKEN_UP2ARROW

  102 dollars: simpledollar dollars
  103        | simpledollar

  104 down: TOKEN_DOWNARROW
  105     | TOKEN_DOWNARROW TOKEN_INTEGER

  106 dollar: TOKEN_DOLLAR TOKEN_INTEGER TOKEN_COLON TOKEN_INTEGER
  107       | simpledollar

  108 simpledollar: TOKEN_DOLLAR TOKEN_INTEGER

  109 downdouble: TOKEN_DOWN2ARROW
  110           | TOKEN_DOWN2ARROW TOKEN_INTEGER

  111 features: TOKEN_LBRACKET features_components TOKEN_RBRACKET
  112         | TOKEN_LBRACKET TOKEN_RBRACKET

  113 features_components: features_components TOKEN_COMMA feature
  114                    | feature

  115 feature: TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER
  116        | TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER TOKEN_LPAR variable TOKEN_RPAR
  117        | TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER TOKEN_LPAR TOKEN_IDENTIFIER TOKEN_RPAR
  118        | TOKEN_PRED TOKEN_COLON variable
  119        | TOKEN_FORM TOKEN_COLON TOKEN_STRING
  120        | identifier TOKEN_COLON feature_value
  121        | variable TOKEN_COLON feature_value
  122        | variable

  123 feature_value: variable
  124              | constant
  125              | TOKEN_FLOAT
  126              | TOKEN_INTEGER
  127              | list
  128              | features
  129              | TOKEN_NIL
  130              | TOKEN_TRUE

  131 constant: identifier
  132         | constant TOKEN_PIPE identifier

  133 identifier: TOKEN_IDENTIFIER

  134 variable: TOKEN_VARIABLE

  135 list: TOKEN_LT list_components TOKEN_GT
  136     | TOKEN_LT TOKEN_GT
  137     | TOKEN_LT list_element TOKEN_COLON2 list_element TOKEN_GT

  138 list_components: list_element TOKEN_COMMA list_components
  139                | list_element

  140 list_element: variable
  141             | constant
  142             | features
  143             | list


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_RIGHTARROW (258) 27 28
TOKEN_UPARROW (259) 100
TOKEN_UP2ARROW (260) 101
TOKEN_DOWNARROW (261) 104 105
TOKEN_DOWN2ARROW (262) 109 110
TOKEN_DOLLAR (263) 106 108
TOKEN_LPAR (264) 14 33 56 57 88 96 116 117
TOKEN_RPAR (265) 14 33 56 57 88 96 116 117
TOKEN_LBRACE (266) 22 23 38 39 47 48
TOKEN_RBRACE (267) 22 23 38 39 47 48
TOKEN_LBRACKET (268) 111 112
TOKEN_RBRACKET (269) 111 112
TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK (270) 2 3 4 5
TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK (271) 2 3 4 5
TOKEN_SEMI (272) 11 12 13 14 15 27 28 29 49 50 51 52 53 54 55
TOKEN_COLON (273) 106 115 116 117 118 119 120 121
TOKEN_COLON2 (274) 137
TOKEN_DOT (275) 6
TOKEN_COMMA (276) 16 113 138
TOKEN_GRAMMAR (277) 2
TOKEN_INPUT (278) 3 4
TOKEN_LEXICON (279) 5
TOKEN_PRED (280) 115 116 117 118
TOKEN_FORM (281) 119
TOKEN_IDENTITY (282) 11 12
TOKEN_TEST (283) 49
TOKEN_TRACE (284) 50 51
TOKEN_ORDER (285) 55
TOKEN_IF (286) 56 57
TOKEN_ELSE (287) 57
TOKEN_NIL (288) 93 129
TOKEN_TRUE (289) 130
TOKEN_SORT (290) 97 98
TOKEN_WITH (291) 97 98
TOKEN_FINISHED (292) 79
TOKEN_UNION (293) 89
TOKEN_SUBSET (294) 54
TOKEN_AFF (295) 53
TOKEN_PIPE (296) 18 34 132
TOKEN_NOT (297) 71
TOKEN_OR (298) 67
TOKEN_AND (299) 68
TOKEN_IMP (300) 69
TOKEN_EQUIV (301) 70
TOKEN_PLUS (302) 80
TOKEN_MINUS (303) 81 85
TOKEN_TIMES (304) 82
TOKEN_DIVIDE (305) 83
TOKEN_MODULO (306) 84
TOKEN_EQUAL (307) 72
TOKEN_DIFF (308) 73
TOKEN_LT (309) 74 135 136 137
TOKEN_LE (310) 75
TOKEN_GT (311) 76 135 136 137
TOKEN_GE (312) 77
TOKEN_IDENTIFIER (313) 9 11 12 20 21 36 88 115 116 117 133
TOKEN_STRING (314) 10 51 119
TOKEN_INTEGER (315) 87 105 106 108 110 126
TOKEN_FLOAT (316) 86 125
TOKEN_VARIABLE (317) 37 134
TOKEN_IFX (318)
TOKEN_MINUS_U (319)


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
axiom (66)
    on left: 1, on right: 0
declaration (67)
    on left: 2 3 4 5 6, on right: 1
dictionary (68)
    on left: 7 8, on right: 5 7
stringOrIdentifier (69)
    on left: 9 10, on right: 13 14
word (70)
    on left: 11 12 13 14 15, on right: 7 8
list_args (71)
    on left: 16 17, on right: 14 16
lexical_entries (72)
    on left: 18 19, on right: 13 14 18
lexical_entry (73)
    on left: 20 21, on right: 18 19
static_structure_statement (74)
    on left: 22 23 24, on right: 6 12 20
rules (75)
    on left: 25 26, on right: 2 25
rule (76)
    on left: 27 28 29, on right: 25 26
terms_vector (77)
    on left: 30 31, on right: 27 30
terms (78)
    on left: 32 33, on right: 30 31
terms_disj (79)
    on left: 34 35, on right: 32 33 34
term (80)
    on left: 36 37, on right: 3 4 27 28 34 35
structure_statement (81)
    on left: 38 39 40, on right: 27 28
list_statement (82)
    on left: 41 42, on right: 38 42 47
static_list_statement (83)
    on left: 43 44, on right: 22 44
statement (84)
    on left: 45 46 47 48, on right: 41 42 56 57
static_statement (85)
    on left: 49 50 51, on right: 43 44 45
dynamic_statement (86)
    on left: 52 53 54 55 56 57, on right: 46
left_hand_side_subset_statement (87)
    on left: 58, on right: 54
right_hand_side_subset_statement (88)
    on left: 59 60 61 62, on right: 54
left_hand_side_aff_statement (89)
    on left: 63 64 65, on right: 53
right_hand_side_aff_statement (90)
    on left: 66, on right: 53
expression_statement (91)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 88 89 90 91 92 93 94 95 96 97 98 99, on right: 49 50 56
    57 66 67 68 69 70 71 72 73 74 75 76 77 80 81 82 83 84 85 88 89
    96
up (92)
    on left: 100, on right: 60 90
updouble (93)
    on left: 101, on right: 63
dollars (94)
    on left: 102 103, on right: 55 102
down (95)
    on left: 104 105, on right: 64
dollar (96)
    on left: 106 107, on right: 78
simpledollar (97)
    on left: 108, on right: 102 103 107
downdouble (98)
    on left: 109 110, on right: 61 91
features (99)
    on left: 111 112, on right: 3 6 12 20 52 58 62 92 128 142
features_components (100)
    on left: 113 114, on right: 111 113
feature (101)
    on left: 115 116 117 118 119 120 121 122, on right: 113 114
feature_value (102)
    on left: 123 124 125 126 127 128 129 130, on right: 120 121
constant (103)
    on left: 131 132, on right: 94 124 132 141
identifier (104)
    on left: 133, on right: 16 17 97 98 120 131 132
variable (105)
    on left: 134, on right: 59 65 95 97 116 118 121 122 123 140
list (106)
    on left: 135 136 137, on right: 98 99 127 143
list_components (107)
    on left: 138 139, on right: 135 138
list_element (108)
    on left: 140 141 142 143, on right: 137 138 139


state 0

    0 $accept: . axiom $end

    TOKEN_DOT      shift, and go to state 1
    TOKEN_GRAMMAR  shift, and go to state 2
    TOKEN_INPUT    shift, and go to state 3
    TOKEN_LEXICON  shift, and go to state 4

    axiom        go to state 5
    declaration  go to state 6


state 1

    6 declaration: TOKEN_DOT . features static_structure_statement

    TOKEN_LBRACKET  shift, and go to state 7

    features  go to state 8


state 2

    2 declaration: TOKEN_GRAMMAR . TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK rules TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK  shift, and go to state 9


state 3

    3 declaration: TOKEN_INPUT . TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK term features TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK
    4            | TOKEN_INPUT . TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK term TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK  shift, and go to state 10


state 4

    5 declaration: TOKEN_LEXICON . TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK dictionary TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK  shift, and go to state 11


state 5

    0 $accept: axiom . $end

    $end  shift, and go to state 12


state 6

    1 axiom: declaration .

    $default  reduce using rule 1 (axiom)


state 7

  111 features: TOKEN_LBRACKET . features_components TOKEN_RBRACKET
  112         | TOKEN_LBRACKET . TOKEN_RBRACKET

    TOKEN_RBRACKET    shift, and go to state 13
    TOKEN_PRED        shift, and go to state 14
    TOKEN_FORM        shift, and go to state 15
    TOKEN_IDENTIFIER  shift, and go to state 16
    TOKEN_VARIABLE    shift, and go to state 17

    features_components  go to state 18
    feature              go to state 19
    identifier           go to state 20
    variable             go to state 21


state 8

    6 declaration: TOKEN_DOT features . static_structure_statement

    TOKEN_LBRACE  shift, and go to state 22

    $default  reduce using rule 24 (static_structure_statement)

    static_structure_statement  go to state 23


state 9

    2 declaration: TOKEN_GRAMMAR TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK . rules TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_SEMI        shift, and go to state 24
    TOKEN_IDENTIFIER  shift, and go to state 25
    TOKEN_VARIABLE    shift, and go to state 26

    rules  go to state 27
    rule   go to state 28
    term   go to state 29


state 10

    3 declaration: TOKEN_INPUT TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK . term features TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK
    4            | TOKEN_INPUT TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK . term TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_IDENTIFIER  shift, and go to state 25
    TOKEN_VARIABLE    shift, and go to state 26

    term  go to state 30


state 11

    5 declaration: TOKEN_LEXICON TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK . dictionary TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_SEMI        shift, and go to state 31
    TOKEN_IDENTITY    shift, and go to state 32
    TOKEN_IDENTIFIER  shift, and go to state 33
    TOKEN_STRING      shift, and go to state 34

    dictionary          go to state 35
    stringOrIdentifier  go to state 36
    word                go to state 37


state 12

    0 $accept: axiom $end .

    $default  accept


state 13

  112 features: TOKEN_LBRACKET TOKEN_RBRACKET .

    $default  reduce using rule 112 (features)


state 14

  115 feature: TOKEN_PRED . TOKEN_COLON TOKEN_IDENTIFIER
  116        | TOKEN_PRED . TOKEN_COLON TOKEN_IDENTIFIER TOKEN_LPAR variable TOKEN_RPAR
  117        | TOKEN_PRED . TOKEN_COLON TOKEN_IDENTIFIER TOKEN_LPAR TOKEN_IDENTIFIER TOKEN_RPAR
  118        | TOKEN_PRED . TOKEN_COLON variable

    TOKEN_COLON  shift, and go to state 38


state 15

  119 feature: TOKEN_FORM . TOKEN_COLON TOKEN_STRING

    TOKEN_COLON  shift, and go to state 39


state 16

  133 identifier: TOKEN_IDENTIFIER .

    $default  reduce using rule 133 (identifier)


state 17

  134 variable: TOKEN_VARIABLE .

    $default  reduce using rule 134 (variable)


state 18

  111 features: TOKEN_LBRACKET features_components . TOKEN_RBRACKET
  113 features_components: features_components . TOKEN_COMMA feature

    TOKEN_RBRACKET  shift, and go to state 40
    TOKEN_COMMA     shift, and go to state 41


state 19

  114 features_components: feature .

    $default  reduce using rule 114 (features_components)


state 20

  120 feature: identifier . TOKEN_COLON feature_value

    TOKEN_COLON  shift, and go to state 42


state 21

  121 feature: variable . TOKEN_COLON feature_value
  122        | variable .

    TOKEN_COLON  shift, and go to state 43

    $default  reduce using rule 122 (feature)


state 22

   22 static_structure_statement: TOKEN_LBRACE . static_list_statement TOKEN_RBRACE
   23                           | TOKEN_LBRACE . TOKEN_RBRACE

    TOKEN_RBRACE  shift, and go to state 44
    TOKEN_TEST    shift, and go to state 45
    TOKEN_TRACE   shift, and go to state 46

    static_list_statement  go to state 47
    static_statement       go to state 48


state 23

    6 declaration: TOKEN_DOT features static_structure_statement .

    $default  reduce using rule 6 (declaration)


state 24

   29 rule: TOKEN_SEMI .

    $default  reduce using rule 29 (rule)


state 25

   36 term: TOKEN_IDENTIFIER .

    $default  reduce using rule 36 (term)


state 26

   37 term: TOKEN_VARIABLE .

    $default  reduce using rule 37 (term)


state 27

    2 declaration: TOKEN_GRAMMAR TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK rules . TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK  shift, and go to state 49


state 28

   25 rules: rule . rules
   26      | rule .

    TOKEN_SEMI        shift, and go to state 24
    TOKEN_IDENTIFIER  shift, and go to state 25
    TOKEN_VARIABLE    shift, and go to state 26

    $default  reduce using rule 26 (rules)

    rules  go to state 50
    rule   go to state 28
    term   go to state 29


state 29

   27 rule: term . TOKEN_RIGHTARROW terms_vector structure_statement TOKEN_SEMI
   28     | term . TOKEN_RIGHTARROW structure_statement TOKEN_SEMI

    TOKEN_RIGHTARROW  shift, and go to state 51


state 30

    3 declaration: TOKEN_INPUT TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK term . features TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK
    4            | TOKEN_INPUT TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK term . TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_LBRACKET                           shift, and go to state 7
    TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK  shift, and go to state 52

    features  go to state 53


state 31

   15 word: TOKEN_SEMI .

    $default  reduce using rule 15 (word)


state 32

   11 word: TOKEN_IDENTITY . TOKEN_IDENTIFIER TOKEN_SEMI
   12     | TOKEN_IDENTITY . TOKEN_IDENTIFIER features static_structure_statement TOKEN_SEMI

    TOKEN_IDENTIFIER  shift, and go to state 54


state 33

    9 stringOrIdentifier: TOKEN_IDENTIFIER .

    $default  reduce using rule 9 (stringOrIdentifier)


state 34

   10 stringOrIdentifier: TOKEN_STRING .

    $default  reduce using rule 10 (stringOrIdentifier)


state 35

    5 declaration: TOKEN_LEXICON TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK dictionary . TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK  shift, and go to state 55


state 36

   13 word: stringOrIdentifier . lexical_entries TOKEN_SEMI
   14     | stringOrIdentifier . TOKEN_LPAR list_args TOKEN_RPAR lexical_entries TOKEN_SEMI

    TOKEN_LPAR        shift, and go to state 56
    TOKEN_IDENTIFIER  shift, and go to state 57

    lexical_entries  go to state 58
    lexical_entry    go to state 59


state 37

    7 dictionary: word . dictionary
    8           | word .

    TOKEN_SEMI        shift, and go to state 31
    TOKEN_IDENTITY    shift, and go to state 32
    TOKEN_IDENTIFIER  shift, and go to state 33
    TOKEN_STRING      shift, and go to state 34

    $default  reduce using rule 8 (dictionary)

    dictionary          go to state 60
    stringOrIdentifier  go to state 36
    word                go to state 37


state 38

  115 feature: TOKEN_PRED TOKEN_COLON . TOKEN_IDENTIFIER
  116        | TOKEN_PRED TOKEN_COLON . TOKEN_IDENTIFIER TOKEN_LPAR variable TOKEN_RPAR
  117        | TOKEN_PRED TOKEN_COLON . TOKEN_IDENTIFIER TOKEN_LPAR TOKEN_IDENTIFIER TOKEN_RPAR
  118        | TOKEN_PRED TOKEN_COLON . variable

    TOKEN_IDENTIFIER  shift, and go to state 61
    TOKEN_VARIABLE    shift, and go to state 17

    variable  go to state 62


state 39

  119 feature: TOKEN_FORM TOKEN_COLON . TOKEN_STRING

    TOKEN_STRING  shift, and go to state 63


state 40

  111 features: TOKEN_LBRACKET features_components TOKEN_RBRACKET .

    $default  reduce using rule 111 (features)


state 41

  113 features_components: features_components TOKEN_COMMA . feature

    TOKEN_PRED        shift, and go to state 14
    TOKEN_FORM        shift, and go to state 15
    TOKEN_IDENTIFIER  shift, and go to state 16
    TOKEN_VARIABLE    shift, and go to state 17

    feature     go to state 64
    identifier  go to state 20
    variable    go to state 21


state 42

  120 feature: identifier TOKEN_COLON . feature_value

    TOKEN_LBRACKET    shift, and go to state 7
    TOKEN_NIL         shift, and go to state 65
    TOKEN_TRUE        shift, and go to state 66
    TOKEN_LT          shift, and go to state 67
    TOKEN_IDENTIFIER  shift, and go to state 16
    TOKEN_INTEGER     shift, and go to state 68
    TOKEN_FLOAT       shift, and go to state 69
    TOKEN_VARIABLE    shift, and go to state 17

    features       go to state 70
    feature_value  go to state 71
    constant       go to state 72
    identifier     go to state 73
    variable       go to state 74
    list           go to state 75


state 43

  121 feature: variable TOKEN_COLON . feature_value

    TOKEN_LBRACKET    shift, and go to state 7
    TOKEN_NIL         shift, and go to state 65
    TOKEN_TRUE        shift, and go to state 66
    TOKEN_LT          shift, and go to state 67
    TOKEN_IDENTIFIER  shift, and go to state 16
    TOKEN_INTEGER     shift, and go to state 68
    TOKEN_FLOAT       shift, and go to state 69
    TOKEN_VARIABLE    shift, and go to state 17

    features       go to state 70
    feature_value  go to state 76
    constant       go to state 72
    identifier     go to state 73
    variable       go to state 74
    list           go to state 75


state 44

   23 static_structure_statement: TOKEN_LBRACE TOKEN_RBRACE .

    $default  reduce using rule 23 (static_structure_statement)


state 45

   49 static_statement: TOKEN_TEST . expression_statement TOKEN_SEMI

    TOKEN_UPARROW     shift, and go to state 77
    TOKEN_DOWN2ARROW  shift, and go to state 78
    TOKEN_DOLLAR      shift, and go to state 79
    TOKEN_LPAR        shift, and go to state 80
    TOKEN_LBRACKET    shift, and go to state 7
    TOKEN_NIL         shift, and go to state 81
    TOKEN_SORT        shift, and go to state 82
    TOKEN_FINISHED    shift, and go to state 83
    TOKEN_NOT         shift, and go to state 84
    TOKEN_MINUS       shift, and go to state 85
    TOKEN_LT          shift, and go to state 67
    TOKEN_IDENTIFIER  shift, and go to state 86
    TOKEN_INTEGER     shift, and go to state 87
    TOKEN_FLOAT       shift, and go to state 88
    TOKEN_VARIABLE    shift, and go to state 17

    expression_statement  go to state 89
    up                    go to state 90
    dollar                go to state 91
    simpledollar          go to state 92
    downdouble            go to state 93
    features              go to state 94
    constant              go to state 95
    identifier            go to state 73
    variable              go to state 96
    list                  go to state 97


state 46

   50 static_statement: TOKEN_TRACE . expression_statement TOKEN_SEMI
   51                 | TOKEN_TRACE . TOKEN_STRING TOKEN_SEMI

    TOKEN_UPARROW     shift, and go to state 77
    TOKEN_DOWN2ARROW  shift, and go to state 78
    TOKEN_DOLLAR      shift, and go to state 79
    TOKEN_LPAR        shift, and go to state 80
    TOKEN_LBRACKET    shift, and go to state 7
    TOKEN_NIL         shift, and go to state 81
    TOKEN_SORT        shift, and go to state 82
    TOKEN_FINISHED    shift, and go to state 83
    TOKEN_NOT         shift, and go to state 84
    TOKEN_MINUS       shift, and go to state 85
    TOKEN_LT          shift, and go to state 67
    TOKEN_IDENTIFIER  shift, and go to state 86
    TOKEN_STRING      shift, and go to state 98
    TOKEN_INTEGER     shift, and go to state 87
    TOKEN_FLOAT       shift, and go to state 88
    TOKEN_VARIABLE    shift, and go to state 17

    expression_statement  go to state 99
    up                    go to state 90
    dollar                go to state 91
    simpledollar          go to state 92
    downdouble            go to state 93
    features              go to state 94
    constant              go to state 95
    identifier            go to state 73
    variable              go to state 96
    list                  go to state 97


state 47

   22 static_structure_statement: TOKEN_LBRACE static_list_statement . TOKEN_RBRACE
   44 static_list_statement: static_list_statement . static_statement

    TOKEN_RBRACE  shift, and go to state 100
    TOKEN_TEST    shift, and go to state 45
    TOKEN_TRACE   shift, and go to state 46

    static_statement  go to state 101


state 48

   43 static_list_statement: static_statement .

    $default  reduce using rule 43 (static_list_statement)


state 49

    2 declaration: TOKEN_GRAMMAR TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK rules TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK .

    $default  reduce using rule 2 (declaration)


state 50

   25 rules: rule rules .

    $default  reduce using rule 25 (rules)


state 51

   27 rule: term TOKEN_RIGHTARROW . terms_vector structure_statement TOKEN_SEMI
   28     | term TOKEN_RIGHTARROW . structure_statement TOKEN_SEMI

    TOKEN_LPAR        shift, and go to state 102
    TOKEN_LBRACE      shift, and go to state 103
    TOKEN_IDENTIFIER  shift, and go to state 25
    TOKEN_VARIABLE    shift, and go to state 26

    $default  reduce using rule 40 (structure_statement)

    terms_vector         go to state 104
    terms                go to state 105
    terms_disj           go to state 106
    term                 go to state 107
    structure_statement  go to state 108


state 52

    4 declaration: TOKEN_INPUT TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK term TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK .

    $default  reduce using rule 4 (declaration)


state 53

    3 declaration: TOKEN_INPUT TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK term features . TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK

    TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK  shift, and go to state 109


state 54

   11 word: TOKEN_IDENTITY TOKEN_IDENTIFIER . TOKEN_SEMI
   12     | TOKEN_IDENTITY TOKEN_IDENTIFIER . features static_structure_statement TOKEN_SEMI

    TOKEN_LBRACKET  shift, and go to state 7
    TOKEN_SEMI      shift, and go to state 110

    features  go to state 111


state 55

    5 declaration: TOKEN_LEXICON TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK dictionary TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK .

    $default  reduce using rule 5 (declaration)


state 56

   14 word: stringOrIdentifier TOKEN_LPAR . list_args TOKEN_RPAR lexical_entries TOKEN_SEMI

    TOKEN_IDENTIFIER  shift, and go to state 16

    list_args   go to state 112
    identifier  go to state 113


state 57

   20 lexical_entry: TOKEN_IDENTIFIER . features static_structure_statement
   21              | TOKEN_IDENTIFIER .

    TOKEN_LBRACKET  shift, and go to state 7

    $default  reduce using rule 21 (lexical_entry)

    features  go to state 114


state 58

   13 word: stringOrIdentifier lexical_entries . TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 115


state 59

   18 lexical_entries: lexical_entry . TOKEN_PIPE lexical_entries
   19                | lexical_entry .

    TOKEN_PIPE  shift, and go to state 116

    $default  reduce using rule 19 (lexical_entries)


state 60

    7 dictionary: word dictionary .

    $default  reduce using rule 7 (dictionary)


state 61

  115 feature: TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER .
  116        | TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER . TOKEN_LPAR variable TOKEN_RPAR
  117        | TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER . TOKEN_LPAR TOKEN_IDENTIFIER TOKEN_RPAR

    TOKEN_LPAR  shift, and go to state 117

    $default  reduce using rule 115 (feature)


state 62

  118 feature: TOKEN_PRED TOKEN_COLON variable .

    $default  reduce using rule 118 (feature)


state 63

  119 feature: TOKEN_FORM TOKEN_COLON TOKEN_STRING .

    $default  reduce using rule 119 (feature)


state 64

  113 features_components: features_components TOKEN_COMMA feature .

    $default  reduce using rule 113 (features_components)


state 65

  129 feature_value: TOKEN_NIL .

    $default  reduce using rule 129 (feature_value)


state 66

  130 feature_value: TOKEN_TRUE .

    $default  reduce using rule 130 (feature_value)


state 67

  135 list: TOKEN_LT . list_components TOKEN_GT
  136     | TOKEN_LT . TOKEN_GT
  137     | TOKEN_LT . list_element TOKEN_COLON2 list_element TOKEN_GT

    TOKEN_LBRACKET    shift, and go to state 7
    TOKEN_LT          shift, and go to state 67
    TOKEN_GT          shift, and go to state 118
    TOKEN_IDENTIFIER  shift, and go to state 16
    TOKEN_VARIABLE    shift, and go to state 17

    features         go to state 119
    constant         go to state 120
    identifier       go to state 73
    variable         go to state 121
    list             go to state 122
    list_components  go to state 123
    list_element     go to state 124


state 68

  126 feature_value: TOKEN_INTEGER .
